# internal/handler/user.go
@@ -5,7 +5,6 @@ import (
 	"goSql/utils"
 	"net/http"
 
-	"github.com/go-chi/chi"
 	"github.com/jmoiron/sqlx"
 	_ "github.com/lib/pq"
 )
@@ -22,21 +21,22 @@ type Userr struct {
 	db string
 }
 
-// ShowAccount godoc
-// @Summary      Show an account
-// @Description  get string by ID
-// @Tags         accounts
-// @Accept       json
-// @Produce      json
-// @Param        id   path      int  true  "Account ID"
-// @Success      200  {object}  Userr
-// @Router       /channel/create [post]
+// @Summary		Create Channel
+// @Description	Create Channel
+// @Tags			Channel
+// @ID				create-channel
+// @Accept			json
+// @Produce		json
+// @Param			name	query		string	false	"Name of Channel"
+// @Success		200		{object}	models.Channel
+// @Router			/channel/create [post]
 func (u *UserH) CreateChannel(w http.ResponseWriter, r *http.Request) {
-	channel := models.Channel{Name: "football"}
+	name := r.URL.Query().Get("name")
+	channel := models.Channel{}
 
 	query := `INSERT INTO channels (name, created_at, updated_at)
 	 VALUES ($1, NOW(), NOW()) RETURNING id, name, created_at, updated_at`
-	err := u.db.Get(&channel, query, channel.Name)
+	err := u.db.Get(&channel, query, name)
 	if err != nil {
 		utils.WriteError(w, 500, "Create channel err:", err)
 		return
@@ -48,6 +48,14 @@ func (u *UserH) CreateChannel(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// @Summary		Get channels
+// @Description	Get channels
+// @Tags			Channel
+// @ID				get-channels
+// @Accept			json
+// @Produce		json
+// @Success		200	{array}	models.Channel
+// @Router			/channels [get]
 func (u *UserH) GetChannels(w http.ResponseWriter, r *http.Request) {
 	var channels []models.Channel
 
@@ -69,8 +77,17 @@ type ChannelWithPodchannels struct {
 	Podchannels []models.Podchannel `json:"podchannels"`
 }
 
+// @Summary		Get one channel
+// @Description	Get one channel
+// @Tags			Channel
+// @ID				get-channel
+// @Accept			json
+// @Produce		json
+// @Param			id	query		string	true	"ID of the channel"
+// @Success		200			{object}	ChannelWithPodchannels
+// @Router			/channel [get]
 func (u *UserH) GetChannel(w http.ResponseWriter, r *http.Request) {
-	channelID := chi.URLParam(r, "channelID")
+	channelID := r.URL.Query().Get("id")
 
 	var channel models.Channel
 	var podchannels []models.Podchannel
@@ -97,33 +114,21 @@ func (u *UserH) GetChannel(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func (u *UserH) CreatePodchannel(w http.ResponseWriter, r *http.Request) {
-	podchannel := models.Podchannel{
-		Name:      "",
-		Type:      "",
-		ChannelID: 0,
-	}
+// @Summary		Get podchannel
+// @Description	Get podchannel
+// @Tags			PodChannel
+// @ID				get-podchannel
+// @Accept			json
+// @Produce		json
+// @Param			channelId	query		int	true	"ID of the podchannel"
+// @Success		200				{array}	models.Podchannel
+// @Router			/podchannels [get]
+func (u *UserH) GetPodchannels(w http.ResponseWriter, r *http.Request) {
+	podchannelID := r.URL.Query().Get("channelId")
 
-	query := `INSERT INTO podchannels (name, type, channel_id, created_at, updated_at)
-	 VALUES ($1, $2, $3, NOW(), NOW()) RETURNING id, name, created_at, updated_at`
-	err := u.db.Get(&podchannel, query, podchannel.Name, podchannel.Type, podchannel.ChannelID)
-	if err != nil {
-		utils.WriteError(w, 500, "Create podchannel err:", err)
-		return
-	}
-
-	if err := utils.WriteJSON(w, 200, podchannel); err != nil {
-		utils.WriteError(w, 500, "Create podchannel write", err)
-		return
-	}
-}
-
-func (u *UserH) GetPodchannel(w http.ResponseWriter, r *http.Request) {
-	podchannelID := chi.URLParam(r, "podchannelID")
-
-	var podchannel models.Podchannel
-	query := `SELECT * FROM podchannels WHERE id=$1`
-	err := u.db.Get(&podchannel, query, podchannelID)
+	var podchannel []models.Podchannel
+	query := `SELECT * FROM podchannels WHERE channel_id=$1`
+	err := u.db.Select(&podchannel, query, podchannelID)
 
 	if err != nil {
 		utils.WriteError(w, 500, "Get podchannel err:", err)
@@ -136,18 +141,33 @@ func (u *UserH) GetPodchannel(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func (u *UserH) GetPodchannels(w http.ResponseWriter, r *http.Request) {
-	var podchannels []models.Podchannel
-	query := `SELECT * FROM podchannels`
-	err := u.db.Select(&podchannels, query)
+// @Summary		Create one podchannel
+// @Description	Create one podchannel
+// @Tags			PodChannel
+// @ID				create-podchannel
+// @Accept			json
+// @Produce		json
+// @Param			name		query		string	true	"Name of the podchannel"
+// @Param			type		query		string	true	"type of the podchannel"
+// @Param			id	query		int		true	"channel of the podchannel"
+// @Success		200			{object}	ChannelWithPodchannels
+// @Router			/podchannel/create [post]
+func (u *UserH) CreatePodchannel(w http.ResponseWriter, r *http.Request) {
+	name := r.URL.Query().Get("name")
+	types := r.URL.Query().Get("types")
+	channelID := r.URL.Query().Get("id")
+	var podchannel models.Podchannel
 
+	query := `INSERT INTO podchannels (name, types, channel_id, created_at, updated_at)
+	 VALUES ($1, $2, $3, NOW(), NOW()) RETURNING id, name, created_at, updated_at`
+	err := u.db.Get(&podchannel, query, name, types, channelID)
 	if err != nil {
-		utils.WriteError(w, 500, "Get podchannels err:", err)
+		utils.WriteError(w, 500, "Create podchannel err:", err)
 		return
 	}
 
-	if err := utils.WriteJSON(w, 200, podchannels); err != nil {
-		utils.WriteError(w, 500, "Get podchannels write", err)
+	if err := utils.WriteJSON(w, 200, podchannel); err != nil {
+		utils.WriteError(w, 500, "Create podchannel write", err)
 		return
 	}
 }
